[gd_scene load_steps=31 format=3 uid="uid://xtyxj2sqgqfh"]

[ext_resource type="Texture2D" uid="uid://duiny3lc3nyet" path="res://assets/player_assets/Hero Blue 54x53 Sprite.png" id="1_gipu1"]
[ext_resource type="Script" path="res://scripts/player_scripts/player.gd" id="1_n204c"]
[ext_resource type="PackedScene" uid="uid://dltkniepp3hy3" path="res://scenes/components_scenes/health_component.tscn" id="4_2pvp1"]
[ext_resource type="PackedScene" uid="uid://bs6si2abqd16y" path="res://scenes/components_scenes/hurtbox_component.tscn" id="5_8a7jh"]
[ext_resource type="PackedScene" uid="uid://delafyvj7igsv" path="res://scenes/components_scenes/hitbox_component.tscn" id="8_px2d3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_yklck"]
atlas = ExtResource("1_gipu1")
region = Rect2(0, 318, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nivl"]
atlas = ExtResource("1_gipu1")
region = Rect2(54, 318, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7sus"]
atlas = ExtResource("1_gipu1")
region = Rect2(108, 318, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_acrbc"]
atlas = ExtResource("1_gipu1")
region = Rect2(162, 318, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqf63"]
atlas = ExtResource("1_gipu1")
region = Rect2(216, 318, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_gq35r"]
atlas = ExtResource("1_gipu1")
region = Rect2(0, 583, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg7db"]
atlas = ExtResource("1_gipu1")
region = Rect2(54, 583, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytbu0"]
atlas = ExtResource("1_gipu1")
region = Rect2(108, 0, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhit2"]
atlas = ExtResource("1_gipu1")
region = Rect2(324, 159, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_0obgn"]
atlas = ExtResource("1_gipu1")
region = Rect2(0, 159, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_guqug"]
atlas = ExtResource("1_gipu1")
region = Rect2(54, 159, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_yjl8l"]
atlas = ExtResource("1_gipu1")
region = Rect2(108, 159, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_frh4e"]
atlas = ExtResource("1_gipu1")
region = Rect2(162, 159, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdkdk"]
atlas = ExtResource("1_gipu1")
region = Rect2(216, 159, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gdpq"]
atlas = ExtResource("1_gipu1")
region = Rect2(270, 159, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_64eq2"]
atlas = ExtResource("1_gipu1")
region = Rect2(324, 159, 54, 53)

[sub_resource type="AtlasTexture" id="AtlasTexture_okejh"]
atlas = ExtResource("1_gipu1")
region = Rect2(378, 159, 54, 53)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2ba7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yklck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nivl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7sus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acrbc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqf63")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gq35r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg7db")
}],
"loop": false,
"name": &"dash",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytbu0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhit2")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0obgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guqug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yjl8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frh4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdkdk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gdpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64eq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okejh")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_8eotk"]
radius = 5.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w3uy2"]
radius = 5.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nt17b"]
radius = 5.0
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pil3s"]

[sub_resource type="Animation" id="Animation_sfny4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponPivot/HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_vcn8c"]
resource_name = "attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("WeaponPivot/HitboxComponent/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lmij8"]
_data = {
"RESET": SubResource("Animation_sfny4"),
"attack": SubResource("Animation_vcn8c")
}

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 5
collision_layer = 2
script = ExtResource("1_n204c")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u2ba7")
animation = &"attack"
offset = Vector2(6, -5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_8eotk")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)
limit_left = 0
limit_top = 0
limit_right = 3000
limit_bottom = 1200
limit_smoothed = true
position_smoothing_enabled = true

[node name="HealthComponent" parent="." instance=ExtResource("4_2pvp1")]

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_8a7jh")]
position = Vector2(0, -5)
collision_layer = 2
collision_mask = 32
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_w3uy2")

[node name="Timers" type="Node" parent="."]

[node name="AttackTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="ChargedShootTimer" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="PlayerArea" type="Area2D" parent="." groups=["player_area"]]
collision_layer = 2
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea"]
position = Vector2(0, -9)
shape = SubResource("CapsuleShape2D_nt17b")
debug_color = Color(0.494174, 0.448643, 0.956573, 0.42)

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
offset_left = -11.0
offset_top = -27.0
offset_right = 14.0
offset_bottom = -22.0
min_value = 1.0
max_value = 2.0
value = 1.0
show_percentage = false

[node name="WeaponPivot" type="Marker2D" parent="."]

[node name="HitboxComponent" parent="WeaponPivot" instance=ExtResource("8_px2d3")]
collision_layer = 4
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponPivot/HitboxComponent"]
position = Vector2(17, -9)
shape = SubResource("RectangleShape2D_pil3s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lmij8")
}

[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
[connection signal="get_hit" from="HealthComponent" to="." method="_on_health_component_get_hit"]
[connection signal="timeout" from="Timers/AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="Timers/DashTimer" to="." method="_on_dash_timer_timeout"]
